--- a/public/422.html
+++ b/public/422.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   .rails-default-error-page {
+
     background-color: #EFEFEF;
     color: #2E2F30;
     text-align: center;
@@ -23,7 +24,7 @@
     border-right-color: #999;
     border-left-color: #999;
     border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
+    border-top: #6BCDC1 solid 4px;
     border-top-left-radius: 9px;
     border-top-right-radius: 9px;
     background-color: white;
@@ -33,7 +34,7 @@
 
   .rails-default-error-page h1 {
     font-size: 100%;
-    color: #730E15;
+    color: #2E2F30;
     line-height: 1.5em;
   }
 
@@ -47,7 +48,7 @@
     border-bottom-color: #999;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
+    border-top-color: ##6BCDC1;
     color: #666;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
@@ -58,8 +59,8 @@
   <!-- This file lives in public/422.html -->
   <div class="dialog">
     <div>
-      <h1>The change you wanted was rejected.</h1>
-      <p>Maybe you tried to change something you didn't have access to.</p>
+      <h1>The change to SoulJam you wanted was rejected.</h1>
+      <p>Maybe you tried to change something on SoulJam you didn't have access to.</p>
     </div>
     <p>If you are the application owner check the logs for more information.</p>
   </div>
