--- a/public/404.html
+++ b/public/404.html
@@ -7,6 +7,8 @@
   .rails-default-error-page {
     background-image: url("background-new-jam.jpg");
     background-size: cover;
+    background-repeat: no-repeat;
+    height: 100vh;
     background-color: #EFEFEF;
     color: #2E2F30;
     text-align: center;
@@ -25,7 +27,7 @@
     border-right-color: #999;
     border-left-color: #999;
     border-bottom-color: #BBB;
-    border-top: #6BCDC1 solid 4px;
+    border-top: #100444 solid 4px;
     border-top-left-radius: 9px;
     border-top-right-radius: 9px;
     background-color: white;
@@ -49,7 +51,7 @@
     border-bottom-color: #999;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
-    border-top-color: #6BCDC1;
+    border-top-color: #100444;
     color: #666;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
